tdf#123234: Fix subsetting CFF deprecated endchar

Type 2 “endchar” operator can take 4 extra arguments and act like Type 1
“seac” operator. Although this is documented as deprecated, the fonts in
the bug report use it.

Detect the presence of the extra arguments and output a “seac” operator
for them.

Change-Id: Ic24ec8fda586c82612f0cc13f2f31585d40ad9c4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139908
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@aliftype.com>